[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-security-library-validator"
version = "0.1.0"
description = "Prompt validator, output guard, and PII redaction library for LLM applications."
authors = [
  { name = "Sneha Joshi" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy", "black"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-q"
testpaths = ["tests"]
